--- a/templates/common/nav.html
+++ b/templates/common/nav.html
@@ -47,6 +47,10 @@
                             {% endif %}
                         </ul>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-secondary text-white" href="{% url 'account_details' %}">My
+                            Account</a>
+                    </li>
 
                 {% endif %}
                 {% if user.is_authenticated %}
